[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "moex-store"
version = "0.2.239"
authors = [
  { name = "Celeevo", email = "admin@backtrader.ru" },
]
description = "MOEX Store for Backtrader"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["_LICENSE"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

keywords = ["backtrader", "moex", "backtesting", "datafeed", "store", "cerebro"]

dependencies = [
  "aiohttp>=3.9.5,<4",
  "aiodns>=3.2.0,<4",
  "aiomoex>=2.0.0,<2.1.0",
  "backtrader>=1.9.78.123",
  "certifi>=2024.7.4",
  "pandas>=2.2.2,<3",
  "tqdm>=4.66,<5",
]

[project.optional-dependencies]
plot = [
  "matplotlib>=3.8,<4",
]

test = [
  "pytest>=8",
  "aioresponses>=0.7.6",
]

dev = [
  "build>=1.2",
  "twine>=5",
  "pytest>=8",
  "aioresponses>=0.7.6",
]

[project.urls]
Homepage = "https://github.com/Celeevo/moex_store"
Issues = "https://github.com/Celeevo/moex_store/issues"

[tool.setuptools.packages.find]
include = ["moex_store", "moex_store.*"]